# t32_xcamera

./: .gitignore  README
app/: .gitignore  CMakeLists.txt  Config.cmake  make.sh
app/af/include/: func-af.h
app/conf/inc/: conf_process.h
app/conf/src/: conf_msg_process.c  conf_process.c
app/daemon/: Makefile  xcam_daemon  xcam_daemon.c  xcam_daemon_protocol.h  xcam_daemon_upgrade.c
app/daemon/test_tool/: Makefile  file_unpack.c  upgrade.c
app/gbmanage/include/: sipsession.h  svac_interfaces.h
app/gekko_sdk/: README
app/gekko_sdk/example/: CMakeLists.txt  sample-Encoder-video.c  sample-common.c  sample-common.h
app/gekko_sdk/install/include/: gekko.h  gekko_ai3dnr.h  type.h  version.h
app/gekko_sdk/sensor_bin/: os02h10-t41.bin.202402291821.MD5.1b12a  os02h10-t41@gekko.bin.202402291757.MD5.880b6e87fa30402c4afa8ee304db9053  os03a10-t41.bin.202402291821.MD5.92e49  os03a10-t41@gekko.bin.202402291811.MD5.d71ae  os04a10-t41.bin.202402291822.MD5.c183f  os04a10-t41@gekko.bin.202402291812.MD5.bb925  sc200ai-t41.bin.202402291823.MD5.33539
app/mac_set/: Makefile  mac_set  mac_set.c
app/onvif/: Makefile
app/onvif/inc/: func_log.h
app/onvif/soap/: README  gen.sh
app/onvif/soap/src/: onvif.h
app/onvif/soap/wsdl/: devicemgmt.wsdl  devicemgmt.wsdl.bak1  media.wsdl  onvif.xsd
app/onvif/soap/wsdl_origin/: devicemgmt.wsdl  media.wsdl
app/onvif/src/: CMakeLists.txt  func_conf.h  func_log.c  func_network.c  func_osd.c  func_video.c  onvif.c  onvif_func.c
app/onvif/src_soap/: Makefile  onvif.h  soapH.h  soapServer.c  soapStub.h
app/persondet_ivs/MXU/include/: ivspmon.h
app/personvehiclepetdet_ivs/: readme
app/priv_protocol/: Makefile  server.c  xcam_json_process.c  xcam_json_process.h  xconfig.c
app/rcf/: client  shcompiler.sh
app/rcf/RCF/RCF/: README  make.sh
app/rcf/inc/: MyService.hpp  transform_json.h
app/rcf/rcf_client/: Client.cpp  transform_json.c
app/rcf/rcf_server/: CMakeLists.txt  Server.cpp  Serverdump.cpp
app/rtsp/: G711AudioStreamServerMediaSubsession.cpp  G711AudioStreamServerMediaSubsession.hh  G711AudioStreamSource.cpp  G711AudioStreamSource.hh  H264VideoServerMediaSubsession.cpp  H264VideoServerMediaSubsession.hh  H264VideoStreamSource.cpp  H264VideoStreamSource.hh  H265VideoServerMediaSubsession.cpp  H265VideoServerMediaSubsession.hh  H265VideoStreamSource.cpp  H265VideoStreamSource.hh  LiveRTSP.cpp  LiveRTSP.hh  Makefile  StreamSource.cpp  StreamSource.hh  c_liveRTSP.h  test.h264  test1_RTSP.cpp  video_source.c
app/rtsp/live555-20181214/liveMedia/: MediaSession.cpp  MediaSink.cpp  MultiFramedRTPSink.cpp  OnDemandServerMediaSubsession.cpp  RTPInterface.cpp  ServerMediaSession.cpp  StreamParser.cpp
app/rtsp/live555-20181214/proxyServer/: live555ProxyServer
app/rtsp/live555-20181214/testProgs/: playSIP  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToTransportStream  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMPEG1or2VideoStreamer  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOnDemandRTSPServer  testRTSPClient  testWAVAudioStreamer
app/rtsp_client/live/: Makefile  config.mips-linux-gnu-uclibc  make.sh
app/rtsp_client/live/BasicUsageEnvironment/: Makefile
app/rtsp_client/live/UsageEnvironment/: Makefile
app/rtsp_client/live/groupsock/: Makefile
app/rtsp_client/live/hlsProxy/: Makefile
app/rtsp_client/live/liveMedia/: FramedSource.cpp  H265VideoRTPSource.cpp  Makefile  MediaSink.cpp  MultiFramedRTPSource.cpp  OnDemandServerMediaSubsession.cpp  RTCP.cpp  RTPInterface.cpp  RTSPClient.cpp  ServerMediaSession.cpp  StreamParser.cpp
app/rtsp_client/live/mediaServer/: Makefile  live555MediaServer
app/rtsp_client/live/proxyServer/: Makefile  live555ProxyServer
app/rtsp_client/live/testProgs/: Makefile  openRTSP  registerRTSPStream  sapWatch  testH264VideoToHLSSegments  testH264VideoToTransportStream  testH265VideoStreamer  testMP3Streamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testOggStreamer  testOnDemandRTSPServer.cpp  testRTSPClient  testReplicator  testWAVAudioStreamer  vobStreamer
app/socket/: Makefile  client.c  server.c  socket_client_tcp.c  socket_server_tcp.c  socket_tcp_common.h
app/web_server/: readme
app/web_server/boa-0.94.13/: ChangeLog  boa.conf
app/web_server/boa-0.94.13/contrib/: README.chroot.solaris
app/web_server/boa-0.94.13/docs/: boa.8  boa.texi
app/web_server/boa-0.94.13/src/: Makefile  Makefile.in  boa  boa.c  boa_indexer  config.status  defines.h  log.c
app/web_server/webServer/html/: audioSetting.html  basicSet.html  clockSet.html  dub_masterVideoPage.html  encoderSet.html  ethernetSet.html  helpSet.html  imagesSetting.html  ispAwb.html  ispcontrolSet.html  ispcontroldetailSet.html  masterVideoPage.html  nationalStdPlatformSet.html  networkPortSet.html  networkSetting.html  (+6 more)
app/xcam/inc/: bgramapinfo_osd.h  func-af.h  imp_osd.h  xcam_audio_stream.h  xcam_cJson_process.h  xcam_cli_options.h  xcam_com.h  xcam_conf_gb.h  xcam_conf_json.h  xcam_conf_network.h  xcam_conf_process.h  xcam_conf_video.h  xcam_conf_video_bak.h  xcam_ctrl.h  xcam_extra.h  xcam_gb.h  xcam_general.h  xcam_list.h  xcam_log.h  xcam_message_queue.h  xcam_module.h  xcam_msg.h  xcam_network.h  xcam_osd.h  xcam_ptz.h  xcam_rtsp.h  xcam_stream.h  xcam_system.h  xcam_video.h  xcam_video_t32.h  xcam_video_t41.h  xcam_web_process.h
app/xcam/src/: xcam_af.c  xcam_audio_stream.c  xcam_cli_options.c  xcam_conf.c  xcam_conf.h  xcam_conf_gb.c  xcam_conf_json.c  xcam_conf_json_bak.c  xcam_conf_json_bak.h  xcam_conf_network.c  xcam_conf_process.c  xcam_conf_sys.c  xcam_conf_sys.h  xcam_conf_video.c  xcam_conf_video_bak.c  xcam_extra.c  xcam_gb.c  xcam_list.c  xcam_log.c  xcam_main.c  xcam_message_queue.c  xcam_module.c  xcam_msg.c  xcam_network.c  xcam_onvif.c  xcam_osd.c  xcam_ptz.c  xcam_rtsp.c  xcam_simple_list.c  xcam_stream.c  xcam_system.c  xcam_thread.c  xcam_video.c  xcam_web_process.c
(+220 files in other folders)
